--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-      min-height: 100vh;
       justify-content: flex-start;
+      min-height: 100vh;
     }
     h1 {
       text-align: center;
@@ -119,7 +119,7 @@
   <div class="game-container">
     <h1>Lauschter a klick op déi richteg Spillsaach!</h1>
     <button class="audio-button" id="audioButton" aria-label="Lauschter">
-      <img src="https://freeimage.host/i/KWwexTX" alt="Audio">
+      <img src="https://postimg.cc/06gvWYS9" alt="Audio">
     </button>
     <div class="feedback" id="feedback"></div>
     <div class="grid" id="grid"></div>
@@ -149,10 +149,6 @@
     const feedback = document.getElementById('feedback');
     const audioEl = document.getElementById('audio');
     const audioBtn = document.getElementById('audioButton');
-
-    function shuffle(array) {
-      return array.sort(() => Math.random() - 0.5);
-    }
 
     function loadGrid() {
       grid.innerHTML = '';
@@ -205,7 +201,6 @@
       audioEl.play();
     });
 
-    shuffle(remaining);
     loadGrid();
     playNextAudio();
   </script>
