--- a/index.html
+++ b/index.html
@@ -149,9 +149,48 @@
       audioEl.currentTime = 0;
       audioEl.play().catch(()=>{});
     });
+/* Make the embedded page fill the iframe */
+html, body {
+  margin: 0;
+  height: 100%;
+}
+
+/* If you have a main wrapper like .game, .container, .wrapper, etc. */
+.game, .game-container, .container, .wrapper, #app, main {
+  position: fixed;      /* cover the whole iframe */
+  inset: 0;
+  width: 100vw;
+  height: 100vh;
+  max-width: none !important;   /* kill any internal max-width */
+  margin: 0 !important;
+}
+
+/* If your card/panel has a fixed width/height, let it expand */
+.card, .panel, .board, .stage {
+  width: 100% !important;
+  height: 100% !important;
+  max-width: none !important;
+  max-height: none !important;
+  margin: 0 !important;
+  box-shadow: none;          /* optional: remove drop shadow if you don't want it */
+  background: transparent;   /* optional: let Genially bg show through */
+}
+
+/* If you use a grid for the items, let it breathe responsively */
+.grid, .items, .tiles {
+  width: 100%;
+  height: 100%;
+  display: grid;
+  place-items: center;
+  /* tweak columns/gaps as needed */
+  grid-template-columns: repeat(auto-fit, minmax(140px, 1fr));
+  gap: 16px;
+}
 
     loadGrid();
     // autoplay will start right after first user gesture unlocks audio
   </script>
 </body>
 </html>
+
+
