--- a/index.html
+++ b/index.html
@@ -10,35 +10,78 @@
       src: url('https://github.com/albrechtclaire1007/schoulschreft/raw/main/schoulschreft_bold%5B2%5D.TTF') format('truetype');
       font-weight: bold;
     }
+
+    /* --- Reframing: fill the whole iframe/page --- */
+    html, body { margin: 0; height: 100%; }
+    .game, .game-container, .container, .wrapper, #app, main {
+      position: fixed;
+      inset: 0;
+      width: 100vw;
+      height: 100vh;
+      max-width: none !important;
+      margin: 0 !important;
+    }
+    .card, .panel, .board, .stage {
+      width: 100% !important;
+      height: 100% !important;
+      max-width: none !important;
+      max-height: none !important;
+      margin: 0 !important;
+      box-shadow: none;
+      background: transparent;
+    }
+    .grid, .items, .tiles {
+      width: 100%;
+      height: 100%;
+      display: grid;
+      place-items: center;
+      grid-template-columns: repeat(auto-fit, minmax(140px, 1fr));
+      gap: 16px;
+    }
+
+    /* --- App styling --- */
     body {
       font-family: 'Schoulschreft', Arial, sans-serif;
       background: linear-gradient(135deg, #d8ebd4 0%, #8cc987 100%);
-      margin: 0; padding: 20px; display:flex; flex-direction:column; align-items:center; min-height:100vh;
+      margin: 0; padding: 20px;
+      display:flex; flex-direction:column; align-items:center; min-height:100vh;
     }
-    h1 { text-align:center; color:black; margin-bottom:10px; }
+    h1 { text-align:center; color:black; margin: 0 0 10px; }
     .game-container {
-      background:#fff; border-radius:20px; padding:20px; max-width:1000px;
-      box-shadow:0 8px 25px rgba(0,0,0,.1); display:flex; flex-direction:column; align-items:center; gap:20px;
+      background:#fff; border-radius:20px; padding:20px; max-width:1000px; width:min(100%, 1000px);
+      height: calc(100vh - 40px);
+      box-shadow:0 8px 25px rgba(0,0,0,.1); display:flex; flex-direction:column; align-items:center; gap:16px;
     }
+
+    /* Audio button with CSS background (no white edge) */
     .audio-button{
-      background:#8cc987;border:none;border-radius:50%;width:70px;height:70px;
-      display:flex;align-items:center;justify-content:center;cursor:pointer;transition:all .3s ease;
-      box-shadow:0 4px 12px rgba(0,0,0,.2); overflow:hidden; /* clip any white edge */
+      background:#8cc987;
+      border:none; border-radius:50%; width:70px; height:70px;
+      display:flex; align-items:center; justify-content:center; cursor:pointer;
+      transition:transform .2s ease, background-color .2s ease;
+      box-shadow:0 4px 12px rgba(0,0,0,.2);
+      background-image: url('https://i.postimg.cc/kXzQdjQp/temp-Imagef0iu-HC.avif');
+      background-repeat:no-repeat; background-position:center; background-size:70% auto;
+      overflow:hidden;
     }
-    .audio-button:hover{ background:#7ab87a; transform:scale(1.05); }
-    .audio-button img{ width:70%; height:70%; object-fit:contain; display:block; pointer-events:none; }
-    .grid{ display:grid; grid-template-columns:repeat(auto-fit,minmax(140px,1fr)); gap:15px; width:100%; }
+    .audio-button:hover{ background-color:#7ab87a; transform:scale(1.05); }
+
+    .feedback{ font-size:24px; font-weight:bold; color:#333; text-align:center; min-height:30px; }
+    .success{ color:#4CAF50; }
+
+    .grid{ width:100%; flex:1; }
+
     .toy-card{
       background:#fff; border-radius:15px; overflow:hidden; box-shadow:0 4px 10px rgba(0,0,0,.1);
       transition:all .3s ease; cursor:pointer; position:relative;
     }
-    .toy-card.flash{ border:4px solid #8cc987; background:#d8ebd4; transition:all .3s ease; }
+    .toy-card.flash{ border:4px solid #8cc987; background:#d8ebd4; }
     .toy-card.wrong{ border:4px solid #ff6b6b; background:#ffe0e0; animation:shake .4s ease; }
     .toy-card img{ width:100%; height:120px; object-fit:contain; background:#f8f8f8; }
     @keyframes shake{0%,100%{transform:translateX(0)}25%{transform:translateX(-5px)}75%{transform:translateX(5px)}}
-    .feedback{ font-size:24px; font-weight:bold; color:#333; text-align:center; min-height:30px; }
-    .success{ color:#4CAF50; }
-    .finished{ font-size:28px; color:#4CAF50; margin-top:20px; text-align:center; }
+
+    .finished{ font-size:28px; color:#4CAF50; margin-top:10px; text-align:center; }
+
     @media (max-width:600px){
       .audio-button{ width:60px; height:60px; }
       .toy-card img{ height:100px; }
@@ -48,9 +91,9 @@
 <body>
   <div class="game-container">
     <h1>Lauschter a klick op déi richteg Spillsaach!</h1>
-    <button class="audio-button" id="audioButton" aria-label="Lauschter">
-      <img src="https://i.postimg.cc/PqJqqKrv/temp-Imageuq-WDFq.avif" alt="Audio">
-    </button>
+
+    <button class="audio-button" id="audioButton" aria-label="Lauschter"></button>
+
     <div class="feedback" id="feedback"></div>
     <div class="grid" id="grid"></div>
   </div>
@@ -58,22 +101,7 @@
   <audio id="audio" preload="auto" playsinline></audio>
 
   <script>
-    // --- AUDIO AUTOPLAY UNLOCK ---
-    let audioReady = false;
-    const audioEl = document.getElementById('audio');
-    function unlockAudioOnce() {
-      if (audioReady) return;
-      audioEl.muted = true;
-      audioEl.play().then(() => {
-        audioEl.pause(); audioEl.currentTime = 0; audioEl.muted = false;
-        audioReady = true;
-        // immediately start first round if grid already loaded
-        if (!started) { started = true; playNextAudio(); }
-      }).catch(()=>{}); // ignored; will retry on next tap
-    }
-    document.addEventListener('pointerdown', unlockAudioOnce, { once:true });
-    document.getElementById('audioButton').addEventListener('click', unlockAudioOnce, { once:true });
-
+    // --- Data ---
     const toys = [
       { name: 'Kaartespill', image: 'https://i.postimg.cc/VSxkQyb8/temp-Image2t-Ew-Ew.avif', audio: 'https://github.com/albrechtclaire1007/p1spillsaachen/raw/main/1kaarte.mp3' },
       { name: 'Popp', image: 'https://i.postimg.cc/7CFZ8vTw/temp-Imagee-DSUs6.avif', audio: 'https://github.com/albrechtclaire1007/p1spillsaachen/raw/main/1popp.mp3' },
@@ -89,11 +117,13 @@
       { name: 'Wierfel', image: 'https://i.postimg.cc/vxM8TWhy/temp-Image-Zp-G0-TR.avif', audio: 'https://github.com/albrechtclaire1007/p1spillsaachen/raw/main/1wierfel.mp3' }
     ];
 
+    // --- Helpers ---
     const grid = document.getElementById('grid');
     const feedback = document.getElementById('feedback');
     const audioBtn = document.getElementById('audioButton');
+    const audioEl = document.getElementById('audio');
 
-    const shuffle = a => a.sort(() => Math.random() - 0.5);
+    const shuffle = (arr) => arr.sort(() => Math.random() - 0.5);
 
     function loadGrid() {
       grid.innerHTML = '';
@@ -106,12 +136,10 @@
       });
     }
 
-    let remaining = shuffle([...toys]); // shuffled order for rounds
+    let remaining = shuffle([...toys]);
     let current = null;
-    let started = false;
 
     function playNextAudio() {
-      if (!audioReady) return;   // wait until unlocked
       if (remaining.length === 0) {
         feedback.textContent = 'Super, du hues alles richteg geléist!';
         feedback.className = 'finished';
@@ -120,7 +148,7 @@
       }
       current = remaining.pop();
       audioEl.src = current.audio;
-      audioEl.play().catch(()=>{});
+      audioEl.play().catch(()=>{ /* will retry on next gesture */ });
       feedback.textContent = 'Wat hues du héieren?';
       feedback.className = 'feedback';
     }
@@ -143,54 +171,34 @@
       }
     }
 
-    audioBtn.addEventListener('click', () => {
-      if (!audioReady) return unlockAudioOnce();
-      if (!current) return; // nothing queued
-      audioEl.currentTime = 0;
-      audioEl.play().catch(()=>{});
+    // --- Robust autoplay unlock ---
+    let unlocked = false;
+    function tryUnlockAndStart() {
+      if (unlocked) return;
+      // try to satisfy autoplay policies
+      audioEl.muted = true;
+      audioEl.play().then(() => {
+        audioEl.pause();
+        audioEl.currentTime = 0;
+        audioEl.muted = false;
+        unlocked = true;
+        playNextAudio(); // start immediately once unlocked
+      }).catch(() => {
+        // still locked; will retry on next gesture
+      });
+    }
+
+    // Attempt on load/visibility (some browsers allow with allow="autoplay")
+    window.addEventListener('load', tryUnlockAndStart);
+    document.addEventListener('visibilitychange', () => {
+      if (document.visibilityState === 'visible') tryUnlockAndStart();
     });
-/* Make the embedded page fill the iframe */
-html, body {
-  margin: 0;
-  height: 100%;
-}
 
-/* If you have a main wrapper like .game, .container, .wrapper, etc. */
-.game, .game-container, .container, .wrapper, #app, main {
-  position: fixed;      /* cover the whole iframe */
-  inset: 0;
-  width: 100vw;
-  height: 100vh;
-  max-width: none !important;   /* kill any internal max-width */
-  margin: 0 !important;
-}
+    // Attempt on any plausible user gesture inside the iframe
+    ['pointerdown','pointerup','click','keydown','touchstart','touchend','pointerenter','focus']
+      .forEach(evt => document.addEventListener(evt, tryUnlockAndStart, { once:false, passive:true }));
 
-/* If your card/panel has a fixed width/height, let it expand */
-.card, .panel, .board, .stage {
-  width: 100% !important;
-  height: 100% !important;
-  max-width: none !important;
-  max-height: none !important;
-  margin: 0 !important;
-  box-shadow: none;          /* optional: remove drop shadow if you don't want it */
-  background: transparent;   /* optional: let Genially bg show through */
-}
-
-/* If you use a grid for the items, let it breathe responsively */
-.grid, .items, .tiles {
-  width: 100%;
-  height: 100%;
-  display: grid;
-  place-items: center;
-  /* tweak columns/gaps as needed */
-  grid-template-columns: repeat(auto-fit, minmax(140px, 1fr));
-  gap: 16px;
-}
-
-    loadGrid();
-    // autoplay will start right after first user gesture unlocks audio
-  </script>
-</body>
-</html>
+    // Manual replay button
+    audioBtn.addEventListener('click', () => {
 
 
